# comp-starter

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
comp_starter/: __init__.py  __main__.py  cli.py  generator.py
comp_starter/templates/datathon/: .gitignore.j2  README.md.j2  requirements.txt.j2
comp_starter/templates/datathon/configs/: config.yaml
comp_starter/templates/datathon/src/: __init__.py  data.py  evaluation.py  features.py  models.py  submit.py
comp_starter/templates/hackathon/: Dockerfile  README.md.j2
comp_starter/templates/hackathon/app/: dashboard.py.j2  main.py.j2
comp_starter/templates/kaggle/: README.md.j2
comp_starter/templates/research/: .gitignore.j2  README.md.j2  requirements.txt.j2
comp_starter/templates/research/paper/: main.tex.j2  references.bib
submissions/: submission_v001_meta.json  submission_v002_meta.json  submission_v003_meta.json  submission_v004_meta.json  submission_v005_meta.json  submission_v006.csv  submission_v006_meta.json
tests/: test_generator.py
