[project]
name = "comp-starter"
version = "0.1.0"
description = "One-command competition scaffold generator"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "rich>=13.0", "jinja2>=3.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
comp-starter = "comp_starter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
